# knock

./: .gitignore  Dockerfile  README.md  UV.toml  docker-compose.dev.yml  docker-compose.yml  packet_test.py  pyproject.toml  setup.sh  wol_manager.py  wol_server.py
security/: wol_config.json
static/: style.css  wol_manager.js
templates/: index.html
templates/html/: index.html
