[project]
name = "computer-waker"
version = "1.0.0"
description = "Wake-On-LAN node management web application for Ubuntu compute nodes"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Developer", email = "dev@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: TypedDict",
]
keywords = ["wol", "wakeup", "lan", "network", "management", "ubuntu"]
dependencies = [
    "flask>=2.3.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "flake8>=6.1.0",
    "mypy>=1.8.0",
]
all = [
    "computer-waker[dev]",
]

[project.scripts]
wol-server = "wol_server:main"
wol-test = "packet_test:main"

[project.urls]
Homepage = "https://github.com/yourname/computer-waker"
Documentation = "https://github.com/yourname/computer-waker#readme"
Issues = "https://github.com/yourname/computer-waker/issues"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "flake8>=6.1.0",
    "mypy>=1.8.0",
    "ruff>=0.4.0",
    "pre-commit>=3.6.0",
]


#[tool.uv.sources]
#flask = { workspace = true }
#pyyaml = { workspace = true }
#python-dotenv = { workspace = true }
#psutil = { workspace = true }

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
)/
'''

[tool.flake8]
max-line-length = 100
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
    "*.egg-info",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--authored",
]
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]

[tool.coverage.run]
source = [
    "computer_waker",
    "packet_test",
]
branch = true
omit = [
    "*/site-packages/*",
    "*.pyc",
    "./build/*",
    "./dist/*",
    "./.venv/*",
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "等多",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = true
